--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <script
       src="https://kit.fontawesome.com/bf65bab49c.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
+
     <title>Chats|Kakao Clone</title>
   </head>
   <body>
@@ -14,13 +17,14 @@
       <div class="status-bar__column">
         <span class="status-bar__clock">13:54</span>
       </div>
-      <div class="status-bar__column"></div>
-      <!--from fontawesome-->
-      <i class="far fa-clock"></i>
-      <i class="fas fa-volume-up"></i>
-      <i class="fas fa-wifi"></i>
-      <i class="fas fa-battery-full"></i>
-      <span class="status-bar__battery-level">100%</span>
+      <div class="status-bar__column">
+        <!--from fontawesome-->
+        <i class="far fa-clock"></i>
+        <i class="fas fa-volume-up"></i>
+        <i class="fas fa-wifi"></i>
+        <span class="status-bar__battery-level">100%</span>
+        <i class="fas fa-battery-full"></i>
+      </div>
     </div>
     <header class="header">
       <div class="header__header-column">
@@ -31,6 +35,8 @@
           <i class="fas fa-search"></i>
         </span>
         <span class="header__icon">
+          <div class="header__badge">+</div>
+          <!--Badge-->
           <i class="far fa-comment"></i>
         </span>
         <span class="header__icon">
@@ -45,23 +51,32 @@
       <ul class="chats__list">
         <li class="chats__chat chat">
           <a href="chat.html">
-            <div class="chat__column">
-              <img class="chat__avatar g-avatar" src="images/faceoflouis.jpg" />
-              <div class="chat__content">
-                <span class="chat__username">
-                  Louis
-                </span>
-                <span class="chat__preview">Situration in Mid-East?</span>
+            <div class="chats__chat friend friend--lg">
+              <div class="friend__column">
+                <img
+                  src="images/faceoflouis.jpg"
+                  class="midium-avatar friend__avatar"
+                />
+                <div class="friend__content">
+                  <span class="friend__name">
+                    Louis
+                  </span>
+                  <span class="friend__bottom-text">
+                    Thanks!! I hope you finish it, too.
+                  </span>
+                </div>
               </div>
-            </div>
-            <div class="chat__column">
-              <span class="chat__timestamp">Yesterday</span>
+              <div class="friend__column">
+                <div class="friend__now-listening">
+                  <span class="chat__timestamp">18:20</span>
+                </div>
+              </div>
             </div>
           </a>
         </li>
       </ul>
     </main>
-    <nav class="navigation">
+    <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-item">
           <a href="friends.html" class="nav__list-link">
@@ -70,6 +85,8 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">2</div>
+            <!--Badge-->
             <i class="fas fa-comment"></i>
           </a>
         </li>
