--- a/friends.html
+++ b/friends.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/bf65bab49c.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Friends|Kakao Clone</title>
   </head>
   <body>
@@ -14,13 +15,14 @@
       <div class="status-bar__column">
         <span class="status-bar__clock">13:54</span>
       </div>
-      <div class="status-bar__column"></div>
-      <!--from fontawesome-->
-      <i class="far fa-clock"></i>
-      <i class="fas fa-volume-up"></i>
-      <i class="fas fa-wifi"></i>
-      <i class="fas fa-battery-full"></i>
-      <span class="status-bar__battery-level">100%</span>
+      <div class="status-bar__column">
+        <!--from fontawesome-->
+        <i class="far fa-clock"></i>
+        <i class="fas fa-volume-up"></i>
+        <i class="fas fa-wifi"></i>
+        <i class="fas fa-battery-full"></i>
+        <span class="status-bar__battery-level">100%</span>
+      </div>
     </div>
     <header class="header">
       <div class="header__header-column">
@@ -42,8 +44,8 @@
       </div>
     </header>
     <main class="friends">
-      <header class="friends__header">
-        <div class="friends__friend friend--lg">
+      <header class="friend__header">
+        <div class="friends__friend friend friend--lg">
           <div class="friend__column">
             <img src="images/myphoto.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
@@ -59,9 +61,9 @@
       </header>
       <div class="friends__plus">
         <h5 class="friends__title">Plus Friend</h5>
-        <div class="friends__friend friend">
+        <div class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="images/happytom.jpg" class="g-avatar friend__avatar" />
+            <img src="images/happytom.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus Friend
@@ -74,7 +76,7 @@
         <h5 class="friends__title">Friends 4</h5>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="images/happytom.jpg" class="g-avatar friend__avatar" />
+            <img src="images/happytom.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Happy Tom
@@ -95,10 +97,7 @@
         </li>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img
-              src="images/angry johnny.jpg"
-              class="g-avatar friend__avatar"
-            />
+            <img src="images/angry johnny.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Angry Johnny
@@ -111,7 +110,7 @@
         </li>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="images/paul.jpg" class="g-avatar friend__avatar" />
+            <img src="images/paul.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Paul(포올)
@@ -124,7 +123,7 @@
         </li>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="images/faceoflouis.jpg" class="g-avatar friend__avatar" />
+            <img src="images/faceoflouis.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Louis
@@ -137,7 +136,7 @@
         </li>
       </ul>
     </main>
-    <nav class="navigation">
+    <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-item">
           <a href="friends.html" class="nav__list-link">
@@ -146,6 +145,8 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">2</div>
+            <!--Badge-->
             <i class="far fa-comment"></i>
           </a>
         </li>
