--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/bf65bab49c.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Settings|Kakao Clone</title>
   </head>
   <body>
@@ -14,19 +15,20 @@
       <div class="status-bar__column">
         <span class="status-bar__clock">13:54</span>
       </div>
-      <div class="status-bar__column"></div>
-      <!--from fontawesome-->
-      <i class="far fa-clock"></i>
-      <i class="fas fa-volume-up"></i>
-      <i class="fas fa-wifi"></i>
-      <i class="fas fa-battery-full"></i>
-      <span class="status-bar__battery-level">100%</span>
+      <div class="status-bar__column">
+        <!--from fontawesome-->
+        <i class="far fa-clock"></i>
+        <i class="fas fa-volume-up"></i>
+        <i class="fas fa-wifi"></i>
+        <i class="fas fa-battery-full"></i>
+        <span class="status-bar__battery-level">100%</span>
+      </div>
     </div>
     <header class="header">
       <div class="header__header-column">
         <div class="header__back-btn">
           <a href="more.html">
-            <i class="fas fa-arrow-left fa-2x"></i>
+            <i class="fas fa-arrow-left"></i>
           </a>
         </div>
         <h1 class="header__title">Settings</h1>
