--- a/friends.html
+++ b/friends.html
@@ -44,7 +44,7 @@
       </div>
     </header>
     <main class="friends">
-      <header class="friend__header">
+      <header class="friends__header">
         <div class="friends__friend friend friend--lg">
           <div class="friend__column">
             <img src="images/myphoto.jpg" class="g-avatar friend__avatar" />
@@ -90,8 +90,8 @@
             <div class="friend__now-listening">
               <span>
                 Close to you - Carpenters
+                <i class="fas fa-play"></i>
               </span>
-              <i class="fas fa-play"></i>
             </div>
           </div>
         </li>
