--- a/more.html
+++ b/more.html
@@ -88,24 +88,26 @@
         </ul>
       </header>
       <section class="more__suggestions">
-        <h5 class="more__suggestions title">Suggestions</h5>
+        <h5 class="more__suggestions-title">Suggestions</h5>
         <ul class="more__suggestions-list">
           <li class="more__suggestion suggestion">
-            <span class="suggestion__icon">
-              <i class="fas fa-quote-right fa-2x"></i>
-            </span>
+            <div class="suggestion__icon">
+              <i class="fas fa-quote-right"></i>
+            </div>
             <span class="suggestion__title">Kakao Story</span>
           </li>
           <li class="more__suggestion suggestion">
-            <span class="suggestion__icon">
-              <i class="fas fa-beer fa-2x"></i>
-            </span>
+            <div class="suggestion__icon">
+              <span class="beer">
+                <i class="fas fa-beer"></i>
+              </span>
+            </div>
             <span class="suggestion__title">Kakao friends</span>
           </li>
           <li class="more__suggestion suggestion">
-            <span class="suggestion__icon">
-              <i class="far fa-gem fa-2x"></i>
-            </span>
+            <div class="suggestion__icon">
+              <i class="far fa-gem"></i>
+            </div>
             <span class="suggestion__title">Friends Gem</span>
           </li>
         </ul>
