--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 />
                 <div class="friend__content">
                   <span class="friend__name">
-                    Louis
+                    친구4
                   </span>
                   <span class="friend__bottom-text">
                     Thanks!! I hope you finish it, too.
@@ -67,8 +67,10 @@
                 </div>
               </div>
               <div class="friend__column">
-                <div class="friend__now-listening">
-                  <span class="chat__timestamp">18:20</span>
+                <div class="nav__badge">2</div>
+                <!--Badge-->
+                <div class="friend__time">
+                  <span class="chat__timestamp">오후 6:20</span>
                 </div>
               </div>
             </div>
