--- a/chat.html
+++ b/chat.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Chat|Kakao Clone</title>
   </head>
-  <body>
+  <body class="chats-body">
     <div class="status-bar">
       <div class="status-bar__column">
         <span class="status-bar__clock">13:54</span>
@@ -42,7 +42,7 @@
         </span>
       </div>
     </header>
-    <main class="chat">
+    <main class="chat-screen">
       <ul class="chat__messages">
         <span class="chat__timestamp">Friday, June 13, 2020</span>
         <li class="incoming-message message">
@@ -72,16 +72,18 @@
       <div class="chat__write-column">
         <i class="far fa-plus-square"></i>
       </div>
-      <div class="chat__write-column"></div>
-      <input type="text" placeholder="Send Message" class="cht__write-input" />
-
+      <div class="chat__write-column">
+        <input
+          type="text"
+          placeholder="Send Message"
+          class="cht__write-input"
+        />
+      </div>
       <div class="chat__write-column">
         <span class="chat__write-icon">
           <i class="far fa-smile"></i>
         </span>
-        <span class="chat__write-icon">
-          <i class="fas fa-microphone-alt"></i>
-        </span>
+        <span class="chat__write-icon"> <i class="fas fa-hashtag"></i> </span>
       </div>
     </div>
   </body>
