--- a/friends.html
+++ b/friends.html
@@ -32,9 +32,12 @@
         <span class="header__icon">
           <i class="fas fa-search"></i>
         </span>
-        <span class="header__icon">
+        <span class="header__icon2">
+          <div class="header__badge2">+</div>
+          <!--Badge-->
           <i class="far fa-user"></i>
         </span>
+
         <span class="header__icon">
           <i class="fas fa-music"></i>
         </span>
@@ -50,39 +53,46 @@
             <img src="images/myphoto.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Arthur Kim
+                김일규
               </span>
               <span class="friend__status">
-                I hate monday!!
+                Arthur Kim
               </span>
             </div>
           </div>
         </div>
       </header>
-      <div class="friends__plus">
-        <h5 class="friends__title">Plus Friend</h5>
+      <div class="friends__new">
+        <h5 class="friends__title">추천친구</h5>
         <div class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="images/happytom.jpg" class="friend__avatar" />
+            <img src="images/Newfriends.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Plus Friend
+                새로운 친구를 만나보세요!
+              </span>
+            </div>
+          </div>
+          <div class="friends__recommend">
+            <div class="friends__recommendcnt">
+              <span>
+                13 >
               </span>
             </div>
           </div>
         </div>
       </div>
       <ul class="friends__list">
-        <h5 class="friends__title">Friends 4</h5>
+        <h5 class="friends__title">친구 4</h5>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
             <img src="images/happytom.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Happy Tom
+                친구1
               </span>
               <span class="friend__status">
-                I loooove friday!!
+                친구1_상태메세지
               </span>
             </div>
           </div>
@@ -100,10 +110,10 @@
             <img src="images/angry johnny.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Angry Johnny
+                친구2
               </span>
               <span class="friend__status">
-                I hate every day!!
+                친구2_상태메세지
               </span>
             </div>
           </div>
@@ -113,10 +123,10 @@
             <img src="images/paul.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Paul(포올)
+                친구3
               </span>
               <span class="friend__status">
-                지구는 날씨가 좋네요
+                친구3_상태메세지
               </span>
             </div>
           </div>
@@ -126,10 +136,10 @@
             <img src="images/faceoflouis.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Louis
+                친구4
               </span>
               <span class="friend__status">
-                Good day!
+                친구4_상태메세지
               </span>
             </div>
           </div>
