--- a/more.html
+++ b/more.html
@@ -26,7 +26,7 @@
     </div>
     <header class="header">
       <div class="header__header-column">
-        <h1 class="header__title">More</h1>
+        <h1 class="header__title">더보기</h1>
       </div>
       <div class="header__header-column">
         <span class="header__icon">
@@ -52,7 +52,7 @@
             <img src="images/myphoto.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Arthur Kim
+                김일규
               </span>
               <span class="friend__status">
                 hhh270@naver.com
@@ -68,21 +68,27 @@
             <span class="more__btn-icon">
               <i class="far fa-smile fa-2x"></i> </span
             ><span class="more__btn-title">
-              Emoticons
+              이모티콘
             </span>
           </li>
           <li class="more__btn">
             <span class="more__btn-icon">
-              <i class="fas fa-brush fa-2x"></i> </span
-            ><span class="more__btn-title">
-              Themes
+              <span class="theme">
+                <i class="fas fa-brush fa-2x"></i>
+              </span>
+            </span>
+            <span class="more__btn-title">
+              테마
             </span>
           </li>
           <li class="more__btn">
             <span class="more__btn-icon">
-              <i class="fab fa-kickstarter fa-2x"></i></span
-            ><span class="more__btn-title">
-              Account
+              <span class="account">
+                <i class="fab fa-kickstarter fa-2x"></i>
+              </span>
+            </span>
+            <span class="more__btn-title">
+              계정
             </span>
           </li>
         </ul>
@@ -94,7 +100,7 @@
             <div class="suggestion__icon">
               <i class="fas fa-quote-right"></i>
             </div>
-            <span class="suggestion__title">Kakao Story</span>
+            <span class="suggestion__title">카카오 스토리</span>
           </li>
           <li class="more__suggestion suggestion">
             <div class="suggestion__icon">
@@ -102,7 +108,7 @@
                 <i class="fas fa-beer"></i>
               </span>
             </div>
-            <span class="suggestion__title">Kakao friends</span>
+            <span class="suggestion__title">카카오 프렌즈</span>
           </li>
           <li class="more__suggestion suggestion">
             <div class="suggestion__icon">
