chat.css revised
chat.css revised

--- a/chat.html
+++ b/chat.html
@@ -44,7 +44,7 @@
     </header>
     <main class="chat-screen">
       <ul class="chat__messages">
-        <span class="chat__timestamp">Friday, June 13, 2020</span>
+        <span class="chat__timestamp">2020년 6월 25일 목요일</span>
         <li class="incoming-message message">
           <img
             src="images/faceoflouis.jpg"
@@ -53,13 +53,14 @@
           <div class="message__content">
             <span class="message__author">Louis</span>
             <div class="message__bubble">
-              Congrats! I heard you finished project well!
+              Congrats!<br />
+              I heard you finished project well!
             </div>
           </div>
-          <span class="message__timestamp">18:09</span>
+          <span class="message__timestamp">오후 6:09</span>
         </li>
-        <li class="incoming-message message">
-          <span class="message__timestamp">18:20</span>
+        <li class="sent-message message">
+          <span class="message__timestamp">오후 6:20</span>
           <div class="message__content">
             <div class="message__bubble">
               Thanks!! I hope you finish it, too.
