Chat css updated
chat css updated.
-Gradient and font-color

--- a/chat.html
+++ b/chat.html
@@ -31,7 +31,7 @@
             <i class="fas fa-arrow-left"></i>
           </a>
         </div>
-        <h1 class="header__title">Louis</h1>
+        <h1 class="header__title">친구4</h1>
       </div>
       <div class="header__header-column">
         <span class="header__icon">
@@ -51,7 +51,7 @@
             class="midium-avatar message__avatar"
           />
           <div class="message__content">
-            <span class="message__author">Louis</span>
+            <span class="message__author">친구4</span>
             <div class="message__bubble">
               Congrats!<br />
               I heard you finished project well!
@@ -64,6 +64,28 @@
           <div class="message__content">
             <div class="message__bubble">
               Thanks!! I hope you finish it, too.
+            </div>
+          </div>
+        </li>
+        <li class="incoming-message message">
+          <img
+            src="images/faceoflouis.jpg"
+            class="midium-avatar message__avatar"
+          />
+          <div class="message__content">
+            <span class="message__author">친구4</span>
+            <div class="message__bubble">
+              I hope.....to finish it asap.
+            </div>
+          </div>
+          <span class="message__timestamp">오후 6:23</span>
+        </li>
+        <li class="sent-message message">
+          <span class="message__timestamp">오후 6:25</span>
+          <div class="message__content">
+            <div class="message__bubble">
+              Cheer up! You can do it!<br />
+              see you in monday!
             </div>
           </div>
         </li>
