chat_status-bar_position: fixed
chat_status-bar_position: fixed

--- a/chat.html
+++ b/chat.html
@@ -11,37 +11,40 @@
     <title>Chat|Kakao Clone</title>
   </head>
   <body class="chats-body">
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span class="status-bar__clock">13:54</span>
-      </div>
-      <div class="status-bar__column">
-        <!--from fontawesome-->
-        <i class="far fa-clock"></i>
-        <i class="fas fa-volume-up"></i>
-        <i class="fas fa-wifi"></i>
-        <i class="fas fa-battery-full"></i>
-        <span class="status-bar__battery-level">100%</span>
-      </div>
-    </div>
-    <header class="header">
-      <div class="header__header-column">
-        <div class="header__back-btn">
-          <a href="index.html">
-            <i class="fas fa-arrow-left"></i>
-          </a>
+    <div class="header-wrapper">
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <span class="status-bar__clock">13:54</span>
         </div>
-        <h1 class="header__title">친구4</h1>
+        <div class="status-bar__column">
+          <!--from fontawesome-->
+          <i class="far fa-clock"></i>
+          <i class="fas fa-volume-up"></i>
+          <i class="fas fa-wifi"></i>
+          <span class="status-bar__battery-level">100%</span>
+          <i class="fas fa-battery-full"></i>
+        </div>
       </div>
-      <div class="header__header-column">
-        <span class="header__icon">
-          <i class="fas fa-search"></i>
-        </span>
-        <span class="header__icon">
-          <i class="fas fa-bars"></i>
-        </span>
-      </div>
-    </header>
+      <header class="header">
+        <div class="header__header-column">
+          <div class="header__back-btn">
+            <a href="index.html">
+              <i class="fas fa-arrow-left"></i>
+            </a>
+          </div>
+          <h1 class="header__title">친구4</h1>
+        </div>
+        <div class="header__header-column">
+          <span class="header__icon">
+            <i class="fas fa-search"></i>
+          </span>
+          <span class="header__icon">
+            <i class="fas fa-bars"></i>
+          </span>
+        </div>
+      </header>
+    </div>
+
     <main class="chat-screen">
       <ul class="chat__messages">
         <span class="chat__timestamp">2020년 6월 25일 목요일</span>
