--- a/chat.html
+++ b/chat.html
@@ -44,7 +44,6 @@
         </div>
       </header>
     </div>
-
     <main class="chat-screen">
       <ul class="chat__messages">
         <span class="chat__timestamp">2020년 6월 25일 목요일</span>
@@ -94,18 +93,17 @@
         </li>
       </ul>
     </main>
-    <div class="chat__write">
-      <div class="chat__write-column">
+    <div class="chat__write-container">
+      <input
+        class="chat__write"
+        type="text"
+        placeholder="Send Message"
+        class="cht__write-input"
+      />
+      <div class="chat__icon-left chat__icon">
         <i class="far fa-plus-square"></i>
       </div>
-      <div class="chat__write-column">
-        <input
-          type="text"
-          placeholder="Send Message"
-          class="cht__write-input"
-        />
-      </div>
-      <div class="chat__write-column">
+      <div class="chat__icon-right chat__icon">
         <span class="chat__write-icon">
           <i class="far fa-smile"></i>
         </span>
@@ -114,3 +112,7 @@
     </div>
   </body>
 </html>
+
+<!--  
+
+-->
