--- a/chat.html
+++ b/chat.html
@@ -112,6 +112,11 @@
         <span class="chat__write-icon"> <i class="fas fa-hashtag"></i> </span>
       </div>
     </div>
+    <div class="bigScreen">
+      <span class="bigScreen__text">
+        Please make your screen small!
+      </span>
+    </div>
   </body>
 </html>
 
