--- a/friends.html
+++ b/friends.html
@@ -42,7 +42,9 @@
           <i class="fas fa-music"></i>
         </span>
         <span class="header__icon">
-          <i class="fas fa-cog"></i>
+          <a href="settings.html">
+            <i class="fas fa-cog"></i>
+          </a>
         </span>
       </div>
     </header>
@@ -172,5 +174,10 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">
+        Please make your screen small!
+      </span>
+    </div>
   </body>
 </html>
