--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
           <span class="header__icon">
             <i class="fas fa-music"></i>
           </span>
+
           <span class="header__icon">
-            <i class="fas fa-cog"></i>
+            <a href="settings.html">
+              <i class="fas fa-cog"></i>
+            </a>
           </span>
         </div>
       </header>
@@ -105,5 +108,10 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">
+        Please make your screen small!
+      </span>
+    </div>
   </body>
 </html>
